Added Repec importer. Added OpenDocument spreadsheet export similar to OOo calc. Several refactorings that don't change functionality.